# src/main/java/de/uniba/dsg/jaxrs/controller/BeverageService.java
@@ -3,7 +3,7 @@ package de.uniba.dsg.jaxrs.controller;
 import de.uniba.dsg.jaxrs.db.DB;
 import de.uniba.dsg.jaxrs.model.Bottle;
 import de.uniba.dsg.jaxrs.model.Crate;
-import org.graalvm.compiler.nodes.calc.IntegerDivRemNode;
+//import org.graalvm.compiler.nodes.calc.IntegerDivRemNode;
 
 import java.util.List;
 import java.util.Optional;
@@ -92,4 +92,7 @@ public class BeverageService {
     }
 
 
+    public Bottle getBottleById(final int bottleId) {
+        return this.db.getBottleById(bottleId);
+    }
 }
