# src/main/java/de/uniba/dsg/jaxrs/model/Beverage.java
@@ -1,4 +1,10 @@
 package de.uniba.dsg.jaxrs.model;
 
+import java.net.URI;
+
 public interface Beverage {
+    BeverageType getType();
+    int getId();
+    URI getHref();
+    double getPrice();
 }
